2-model-in-image/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-weblogic-ingress
  namespace: edea-demo-weblogic-domain
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "edea-app.ivandelic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playground-cluster-cluster-1
                port:
                  number: 8001
